--- a/pages/2058.html
+++ b/pages/2058.html
@@ -315,7 +315,7 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='category_theory'><math class='maruku-mathml' display='inline' id='mathml_73676a5f646342c504d9328734129e0a0e7000e2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Category theory</h4>
+<h4 id='category_theory'><math class='maruku-mathml' display='inline' id='mathml_f02480d75356d4423e498d0bb56c155bf1b6e675_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Category theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+theory'>(∞,1)-category theory</a></strong></p>
@@ -348,7 +348,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/equivalence+in+an+%28infinity%2C1%29-category'>equivalences in</a>/<a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>of</a> <math class='maruku-mathml' display='inline' id='mathml_73676a5f646342c504d9328734129e0a0e7000e2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</p>
+<p><a class='existingWikiWord' href='/nlab/show/equivalence+in+an+%28infinity%2C1%29-category'>equivalences in</a>/<a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>of</a> <math class='maruku-mathml' display='inline' id='mathml_f02480d75356d4423e498d0bb56c155bf1b6e675_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</p>
 </li>
 
 <li>
@@ -553,7 +553,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='topos_theory'><math class='maruku-mathml' display='inline' id='mathml_73676a5f646342c504d9328734129e0a0e7000e2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
+<h4 id='topos_theory'><math class='maruku-mathml' display='inline' id='mathml_f02480d75356d4423e498d0bb56c155bf1b6e675_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos+theory'>(∞,1)-topos theory</a></strong></p>
@@ -900,16 +900,16 @@ margin-left: 0em;
 <div class='un_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/locally+presentable+%28infinity%2C1%29-category'>locally presentable (∞,1)-category</a> <math class='maruku-mathml' display='inline' id='mathml_73676a5f646342c504d9328734129e0a0e7000e2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> has <strong>universal colimits</strong> if for every <a class='existingWikiWord' href='/nlab/show/morphism'>morphism</a> <math class='maruku-mathml' display='inline' id='mathml_73676a5f646342c504d9328734129e0a0e7000e2_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>X</mi><mo>→</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>f : X \to Y</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_73676a5f646342c504d9328734129e0a0e7000e2_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> the induced <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-limit'>pullback</a>-<a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-functor'>(∞,1)-functor</a> on <a class='existingWikiWord' href='/nlab/show/over-%28infinity%2C1%29-category'>over-(∞,1)-categories</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_73676a5f646342c504d9328734129e0a0e7000e2_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>f</mi> <mo>*</mo></msup><mo>:</mo><msup><mi>C</mi> <mrow><mo stretchy='false'>/</mo><mi>Y</mi></mrow></msup><mo>→</mo><msup><mi>C</mi> <mrow><mo stretchy='false'>/</mo><mi>X</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>
+<p>A <a class='existingWikiWord' href='/nlab/show/locally+presentable+%28infinity%2C1%29-category'>locally presentable (∞,1)-category</a> <math class='maruku-mathml' display='inline' id='mathml_f02480d75356d4423e498d0bb56c155bf1b6e675_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> has <strong>universal colimits</strong> if for every <a class='existingWikiWord' href='/nlab/show/morphism'>morphism</a> <math class='maruku-mathml' display='inline' id='mathml_f02480d75356d4423e498d0bb56c155bf1b6e675_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>X</mi><mo>→</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>f : X \to Y</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_f02480d75356d4423e498d0bb56c155bf1b6e675_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> the induced <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-limit'>pullback</a>-<a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-functor'>(∞,1)-functor</a> on <a class='existingWikiWord' href='/nlab/show/over-%28infinity%2C1%29-category'>over-(∞,1)-categories</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f02480d75356d4423e498d0bb56c155bf1b6e675_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>f</mi> <mo>*</mo></msup><mo>:</mo><msup><mi>C</mi> <mrow><mo stretchy='false'>/</mo><mi>Y</mi></mrow></msup><mo>→</mo><msup><mi>C</mi> <mrow><mo stretchy='false'>/</mo><mi>X</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>
   f^* : C^{/Y} \to C^{/X}
 
 </annotation></semantics></math></div>
 <p>preserves all <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-limit'>colimits</a>.</p>
 </div>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_73676a5f646342c504d9328734129e0a0e7000e2_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><mi>K</mi><mo>→</mo><msup><mi>C</mi> <mrow><mo stretchy='false'>/</mo><mi>Y</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>F : K \to C^{/Y}</annotation></semantics></math> a colimit diagram, this says in particular that</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_73676a5f646342c504d9328734129e0a0e7000e2_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msub><mrow><munder><mi>lim</mi> <mo>→</mo></munder></mrow> <mi>k</mi></msub><msub><mi>F</mi> <mi>k</mi></msub><mo stretchy='false'>)</mo><msub><mo>×</mo> <mi>Y</mi></msub><mi>X</mi><mo>≃</mo><msub><mrow><munder><mi>lim</mi> <mo>→</mo></munder></mrow> <mi>k</mi></msub><mo stretchy='false'>(</mo><msub><mi>F</mi> <mi>k</mi></msub><msub><mo>×</mo> <mi>Y</mi></msub><mi>X</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_f02480d75356d4423e498d0bb56c155bf1b6e675_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><mi>K</mi><mo>→</mo><msup><mi>C</mi> <mrow><mo stretchy='false'>/</mo><mi>Y</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>F : K \to C^{/Y}</annotation></semantics></math> a colimit diagram, this says in particular that</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f02480d75356d4423e498d0bb56c155bf1b6e675_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msub><mrow><munder><mi>lim</mi> <mo>→</mo></munder></mrow> <mi>k</mi></msub><msub><mi>F</mi> <mi>k</mi></msub><mo stretchy='false'>)</mo><msub><mo>×</mo> <mi>Y</mi></msub><mi>X</mi><mo>≃</mo><msub><mrow><munder><mi>lim</mi> <mo>→</mo></munder></mrow> <mi>k</mi></msub><mo stretchy='false'>(</mo><msub><mi>F</mi> <mi>k</mi></msub><msub><mo>×</mo> <mi>Y</mi></msub><mi>X</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   ({\lim_\to}_k F_k ) \times_Y X \simeq
   {\lim_\to}_k (F_k \times_Y X)
   \,.
@@ -920,7 +920,7 @@ margin-left: 0em;
 <div class='un_prop'>
 <h6 id='proposition'>Proposition</h6>
 
-<p>If <math class='maruku-mathml' display='inline' id='mathml_73676a5f646342c504d9328734129e0a0e7000e2_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a>, then it has universal colimits.</p>
+<p>If <math class='maruku-mathml' display='inline' id='mathml_f02480d75356d4423e498d0bb56c155bf1b6e675_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a>, then it has universal colimits.</p>
 </div>
 
 <p>This is <a class='existingWikiWord' href='/nlab/show/Higher+Topos+Theory'>HTT, theorem 6.1.0.6 (3) ii)</a></p>
@@ -940,18 +940,22 @@ margin-left: 0em;
 </ul>
 
 <p>
+ 
+ 
+ 
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on July 13, 2017 10:30:09 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.209.183)
+  Revised on December 18, 2017 01:42:25 
+  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
+  (76.167.222.204)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/universal+colimit" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/universal+colimit/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/universal+colimit" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/universal+colimit" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/universal+colimit" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/universal+colimit/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/universal+colimit" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/universal+colimit" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
