--- a/pages/9881.html
+++ b/pages/9881.html
@@ -774,7 +774,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/super+Lie+algebra'>super Lie algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></li>
 </ul>
 </li>
 
@@ -869,7 +869,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></p>
 </li>
 
 <li>
@@ -951,10 +951,16 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents_2'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#Finiteness'>Finiteness</a></li><li><a href='#openclosed_scattering_duality_and_klt_relations'>Open-closed scattering duality and KLT relations</a></li><li><a href='#twistor_string_amplitudes_and_mhv_amplitudes_in_yangmills_theory'>Twistor string amplitudes and MHV amplitudes in Yang-Mills theory</a></li><li><a href='#adic_formulation'><math class='maruku-mathml' display='inline' id='mathml_fb24b24861d7a1b00ec60defc4387214fe977f91_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-Adic formulation</a></li></ul></li><li><a href='#examples'>Examples</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#References'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#higher_order_corrections'>Higher order corrections</a></li><li><a href='#ReferencesOnFiniteness'>On finiteness</a><ul><li><a href='#bosonic_string'>Bosonic string</a></li><li><a href='#superstring'>Superstring</a></li></ul></li><li><a href='#more'>More</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#Finiteness'>Finiteness</a></li><li><a href='#openclosed_scattering_duality_and_klt_relations'>Open-closed scattering duality and KLT relations</a></li><li><a href='#twistor_string_amplitudes_and_mhv_amplitudes_in_yangmills_theory'>Twistor string amplitudes and MHV amplitudes in Yang-Mills theory</a></li><li><a href='#adic_formulation'><math class='maruku-mathml' display='inline' id='mathml_f45995ccf00f51d8986c3460cdd6a7f96080ca69_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-Adic formulation</a></li></ul></li><li><a href='#examples'>Examples</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#References'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#higher_order_corrections'>Higher order corrections</a></li><li><a href='#ReferencesOnFiniteness'>On finiteness</a><ul><li><a href='#bosonic_string'>Bosonic string</a></li><li><a href='#superstring'>Superstring</a></li></ul></li><li><a href='#more'>More</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/string+theory'>perturbative string theory</a> <a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitudes</a> are defined as in <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a>, but with <a class='existingWikiWord' href='/nlab/show/n-point+function'>n-point functions</a> of 1-dimensional <a class='existingWikiWord' href='/nlab/show/worldvolume'>worldline</a> theories replaced by those of <a class='existingWikiWord' href='/nlab/show/worldvolume'>worldsheet</a> <a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>2d CFTs</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/string+theory'>perturbative string theory</a> <a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitudes</a> are defined as in <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a>, but with <a class='existingWikiWord' href='/nlab/show/n-point+function'>n-point functions</a> of 1-dimensional <a class='existingWikiWord' href='/nlab/show/worldline+formalism'>worldline theories</a> (<a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a>) replaced by those of <a class='existingWikiWord' href='/nlab/show/worldvolume'>worldsheet</a> <a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>2d CFTs</a>.</p>
+
+<p><img src='https://ncatlab.org/nlab/files/StringFeynmanDiagrams.png' width='300'/></p>
+
+<blockquote>
+<p>graphics grabbed from <a href='https://benjaminjurke.com/content/articles/2010/string-theory/'>Jurke 10</a></p>
+</blockquote>
 
 <h2 id='properties'>Properties</h2>
 
@@ -971,7 +977,7 @@ margin-left: 0em;
 <div class='num_remark'>
 <h6 id='remark_2'>Remark</h6>
 
-<p>A string scattering amplitude is called <em>UV-finite</em> at a given loop order (<a class='existingWikiWord' href='/nlab/show/genus'>genus</a> of a <a class='existingWikiWord' href='/nlab/show/Riemann+surface'>Riemann surface</a> <math class='maruku-mathml' display='inline' id='mathml_fb24b24861d7a1b00ec60defc4387214fe977f91_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>\Sigma</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_fb24b24861d7a1b00ec60defc4387214fe977f91_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> marked points/string insertions) if the <a class='existingWikiWord' href='/nlab/show/correlator'>correlation function</a> <math class='maruku-mathml' display='inline' id='mathml_fb24b24861d7a1b00ec60defc4387214fe977f91_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><msub><mi>ϕ</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>ϕ</mi> <mi>n</mi></msub><msub><mo stretchy='false'>⟩</mo> <mi>Σ</mi></msub></mrow><annotation encoding='application/x-tex'>\langle \phi_1, \cdots, \phi_n\rangle_{\Sigma}</annotation></semantics></math> is finite for every single such <a class='existingWikiWord' href='/nlab/show/Riemann+surface'>Riemann surface</a>. The actual string amplitude at order <math class='maruku-mathml' display='inline' id='mathml_fb24b24861d7a1b00ec60defc4387214fe977f91_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>,</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(g,n)</annotation></semantics></math> though is the averaging of this over all possible <a class='existingWikiWord' href='/nlab/show/conformal+geometry'>conformal structures</a> on <math class='maruku-mathml' display='inline' id='mathml_fb24b24861d7a1b00ec60defc4387214fe977f91_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>\Sigma</annotation></semantics></math>, hence the <a class='existingWikiWord' href='/nlab/show/integral'>integration</a> of the <a class='existingWikiWord' href='/nlab/show/correlator'>correlation function</a>, as a function on the conformal structure, over the compactified <a class='existingWikiWord' href='/nlab/show/moduli+space+of+conformal+structures'>moduli space of conformal structures</a> <math class='maruku-mathml' display='inline' id='mathml_fb24b24861d7a1b00ec60defc4387214fe977f91_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℳ</mi> <mrow><mi>g</mi><mo>,</mo><mi>n</mi></mrow></msub></mrow><annotation encoding='application/x-tex'>\mathcal{M}_{g,n}</annotation></semantics></math> (a <a class='existingWikiWord' href='/nlab/show/Deligne-Mumford+stack'>Deligne-Mumford stack</a>).</p>
+<p>A string scattering amplitude is called <em>UV-finite</em> at a given loop order (<a class='existingWikiWord' href='/nlab/show/genus'>genus</a> of a <a class='existingWikiWord' href='/nlab/show/Riemann+surface'>Riemann surface</a> <math class='maruku-mathml' display='inline' id='mathml_f45995ccf00f51d8986c3460cdd6a7f96080ca69_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>\Sigma</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_f45995ccf00f51d8986c3460cdd6a7f96080ca69_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> marked points/string insertions) if the <a class='existingWikiWord' href='/nlab/show/correlator'>correlation function</a> <math class='maruku-mathml' display='inline' id='mathml_f45995ccf00f51d8986c3460cdd6a7f96080ca69_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><msub><mi>ϕ</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>ϕ</mi> <mi>n</mi></msub><msub><mo stretchy='false'>⟩</mo> <mi>Σ</mi></msub></mrow><annotation encoding='application/x-tex'>\langle \phi_1, \cdots, \phi_n\rangle_{\Sigma}</annotation></semantics></math> is finite for every single such <a class='existingWikiWord' href='/nlab/show/Riemann+surface'>Riemann surface</a>. The actual string amplitude at order <math class='maruku-mathml' display='inline' id='mathml_f45995ccf00f51d8986c3460cdd6a7f96080ca69_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>,</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(g,n)</annotation></semantics></math> though is the averaging of this over all possible <a class='existingWikiWord' href='/nlab/show/conformal+geometry'>conformal structures</a> on <math class='maruku-mathml' display='inline' id='mathml_f45995ccf00f51d8986c3460cdd6a7f96080ca69_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>\Sigma</annotation></semantics></math>, hence the <a class='existingWikiWord' href='/nlab/show/integral'>integration</a> of the <a class='existingWikiWord' href='/nlab/show/correlator'>correlation function</a>, as a function on the conformal structure, over the compactified <a class='existingWikiWord' href='/nlab/show/moduli+space+of+conformal+structures'>moduli space of conformal structures</a> <math class='maruku-mathml' display='inline' id='mathml_f45995ccf00f51d8986c3460cdd6a7f96080ca69_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℳ</mi> <mrow><mi>g</mi><mo>,</mo><mi>n</mi></mrow></msub></mrow><annotation encoding='application/x-tex'>\mathcal{M}_{g,n}</annotation></semantics></math> (a <a class='existingWikiWord' href='/nlab/show/Deligne-Mumford+stack'>Deligne-Mumford stack</a>).</p>
 
 <p>If also this integral is finite, hence if the total <a class='existingWikiWord' href='/nlab/show/measure+space'>measure</a> on the <a class='existingWikiWord' href='/nlab/show/moduli+space+of+conformal+structures'>moduli space of conformal structures</a> is finite, then one says the amplitude is <em>IR-finite</em>.</p>
 
@@ -988,9 +994,9 @@ margin-left: 0em;
 
 <p>The scattering amplitudes in <a class='existingWikiWord' href='/nlab/show/twistor+string+theory'>twistor string theory</a> induce the MHV amplitudes in (<a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super</a>-)<a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a>. See at <em><a class='existingWikiWord' href='/nlab/show/string+theory+results+applied+elsewhere'>string theory results applied elsewhere</a></em> in the section <em><a href='string+theory+results+applied+elsewhere#QCDScatteringAmplitudes'>Application to QCD – Scattering amplitudes</a></em>.</p>
 
-<h3 id='adic_formulation'><math class='maruku-mathml' display='inline' id='mathml_fb24b24861d7a1b00ec60defc4387214fe977f91_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-Adic formulation</h3>
+<h3 id='adic_formulation'><math class='maruku-mathml' display='inline' id='mathml_f45995ccf00f51d8986c3460cdd6a7f96080ca69_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-Adic formulation</h3>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/Veneziano+amplitude'>Veneziano amplitude</a> (open bosonic string tree-level scattering) has an equivalent formulation as the inverse product over all <a class='existingWikiWord' href='/nlab/show/prime+number'>prime numbers</a> <math class='maruku-mathml' display='inline' id='mathml_fb24b24861d7a1b00ec60defc4387214fe977f91_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math> of an amplitude computed not by an integral in the real but in the <a class='existingWikiWord' href='/nlab/show/p-adic+number'>p-adic numbers</a>. For other open string amplitudes this holds up to some regularization. This is the topic of <em><a class='existingWikiWord' href='/nlab/show/p-adic+string+theory'>p-adic string theory</a></em>, see there for more details.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/Veneziano+amplitude'>Veneziano amplitude</a> (open bosonic string tree-level scattering) has an equivalent formulation as the inverse product over all <a class='existingWikiWord' href='/nlab/show/prime+number'>prime numbers</a> <math class='maruku-mathml' display='inline' id='mathml_f45995ccf00f51d8986c3460cdd6a7f96080ca69_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math> of an amplitude computed not by an integral in the real but in the <a class='existingWikiWord' href='/nlab/show/p-adic+number'>p-adic numbers</a>. For other open string amplitudes this holds up to some regularization. This is the topic of <em><a class='existingWikiWord' href='/nlab/show/p-adic+string+theory'>p-adic string theory</a></em>, see there for more details.</p>
 
 <h2 id='examples'>Examples</h2>
 
@@ -1102,7 +1108,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>Finiteness of heterotic and type II superstring <math class='maruku-mathml' display='inline' id='mathml_fb24b24861d7a1b00ec60defc4387214fe977f91_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-point functions in flat spacetime is argued for in</p>
+<p>Finiteness of heterotic and type II superstring <math class='maruku-mathml' display='inline' id='mathml_f45995ccf00f51d8986c3460cdd6a7f96080ca69_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-point functions in flat spacetime is argued for in</p>
 
 <ul>
 <li>Joseph Atick, <a class='existingWikiWord' href='/nlab/show/Gregory+Moore'>Gregory Moore</a>, <a class='existingWikiWord' href='/nlab/show/Ashoke+Sen'>Ashoke Sen</a>, <em>Catoptrick tadpoles</em>, Nucl.Phys. B307 (1988) 221 (<a href='http://inspirehep.net/record/252598?ln=en'>spire</a>)</li>
@@ -1111,7 +1117,7 @@ margin-left: 0em;
 <p>General finiteness of superstring amplitudes is discussed in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Stanley+Mandelstam'>Stanley Mandelstam</a>, <em>The <math class='maruku-mathml' display='inline' id='mathml_fb24b24861d7a1b00ec60defc4387214fe977f91_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> Loop String Amplitude: Explicit Formulas, Finiteness and Absence of Ambiguities</em>, Phys. Lett. B277 (1992) 82. (<a href='http://inspirehep.net/record/319501'>inspire</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Stanley+Mandelstam'>Stanley Mandelstam</a>, <em>The <math class='maruku-mathml' display='inline' id='mathml_f45995ccf00f51d8986c3460cdd6a7f96080ca69_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> Loop String Amplitude: Explicit Formulas, Finiteness and Absence of Ambiguities</em>, Phys. Lett. B277 (1992) 82. (<a href='http://inspirehep.net/record/319501'>inspire</a>)</li>
 </ul>
 
 <p>which shows that a certain divergence which could appear does not.</p>
@@ -1242,14 +1248,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 13, 2017 05:53:09 
+  Revised on December 18, 2017 01:42:02 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (83.208.22.80)
+  (94.220.92.170)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/string+scattering+amplitude" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+scattering+amplitude/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/string+scattering+amplitude" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+scattering+amplitude" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/string+scattering+amplitude" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+scattering+amplitude/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/string+scattering+amplitude" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+scattering+amplitude" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
